Use uber JAR + JRE instead of native image
GraalVM native image generation tends to break between releases,
so this commit moves to an uber JAR and tailored JRE.

The Docker image generation also upgrade Ubuntu, to get the latest
versions of packages.